--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-click==7.1.2
-Flask==1.1.2
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+aniso8601==10.0.0
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.0
+Flask-RESTful==0.3.10
+itsdangerous==2.2.0
+Jinja2==3.1.5
+MarkupSafe==3.0.2
+pytz==2025.1
+six==1.17.0
+Werkzeug==3.1.3
